fix to layout problems

--- a/styles/style_index.scss
+++ b/styles/style_index.scss
@@ -13,7 +13,6 @@ body {
   color: black;
   width: 100%;
   height: 100%;
-  overflow-x: hidden;
 }
 
 .header_title {
@@ -24,6 +23,7 @@ body {
 
 .header_spacer {
   width: 100%;
+  display: none;
 }
 
 .nav {
@@ -86,7 +86,6 @@ p {
 ul {
   text-align: right;
   list-style-position: inside;
-  margin-right: 4em;
 }
 
 .grad_cap {
@@ -161,7 +160,7 @@ ul {
   .skills_img {
     float: none;
     margin: 1em 0;
-    width: 100%;
+    width: 60%;
     height: auto;
   }
 
